--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.h": "c",
         "limits": "c",
-        "type_traits": "c"
+        "type_traits": "c",
+        "cstdint": "c",
+        "compare": "c"
     }
 }
